[package]
name = "webf_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "webf_core_rs"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.0"
webf = { path = "../rusty_webf" }
webf-sys = "0.1.0"

[patch.crates-io]
webf-sys = { path = "../rusty_webf_sys" }

[build-dependencies]
cxx-build = "1.0"

[profile.release]
panic = 'abort'
opt-level = "s"
lto = true
codegen-units = 1