[package]
name = "webf"
version = "0.16.0"
edition = "2021"
repository = "https://github.com/openwebf/webf"
homepage = "https://openwebf.com"
description = "Rust bindings to WebF"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webf-sys = "0.1.0"
libc = "0.2.0"

[patch.crates-io]
webf-sys = { path = "../rusty_webf_sys" }