[package]
name = "webf-sys"
version = "0.16.0"
edition = "2021"
repository = "https://github.com/openwebf/webf"
homepage = "https://openwebf.com"
description = "Rust bindings to Web API which provided by WebF"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
futures = "0.3"

[dependencies.windows]
version = "0.58.0"
features = [
  "Win32_System_Com",
]
